spacing resolve

--- a/css/custom.css
+++ b/css/custom.css
@@ -204,6 +204,9 @@ footer {
     .mb-p-0 {
         padding: 0.5rem !important;
     }
+    .mb-m-0 {
+        margin: 0 !important;
+    }
     .col-xs-6 {
         width: 50%;
     }
@@ -283,11 +286,11 @@ footer {
     display: flex;
     align-items: center;
     padding: 0;
-    /* margin-top: 10px */
+    margin: 0px
 }
 
 .thumbnail_images ul li {
-    margin: 5px;
+    /* margin: 5px; */
     /* padding: 10px; */
     border: 2px solid #eee;
     cursor: pointer;
@@ -300,10 +303,10 @@ footer {
 
 .main_image {
     display: flex;
-    justify-content: center;
+    /* justify-content: center; */
     align-items: center;
     /* border-bottom: 1px solid #eee; */
-    height: 400px;
+    /* height: 400px; */
     width: 100%;
     overflow: hidden
 }
